# PylonCpp

./: Makefile  README  ccdshot.py  configure.cpp  gating.cpp  save_data.cpp  set_picam_env
DisplayImage/: CMakeCache.txt  DisplayImage  Makefile  cmake_install.cmake
FFTImage/: CMakeCache.txt  CMakeLists.txt  FFTImage_fftw.cpp  FFTimage  FFTimage.cpp  Makefile  README  cmake_install.cmake  test.yml
SnapImage/: CMakeCache.txt  CMakeLists.txt  Makefile  SnapImage  SnapImage.cpp  cmake_install.cmake
